<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkBlueMatte"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rs"
        android:textColor="@color/white"
        android:background="@color/black"
        android:gravity="center"
        >
    </TextView>
    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20sp"
        android:layout_gravity="center"
        android:id="@+id/resultSkor"
        android:background="@drawable/line"
        >
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="300sp"
                android:text="@string/rs0"
                android:textSize="30sp"
                android:gravity="center"
                android:id="@+id/nameSK"
                >
            </TextView>
        </TableRow>
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="0"
                android:id="@+id/skor"
                android:textSize="30sp"
                android:gravity="center"
                >
            </TextView>
        </TableRow>
    </TableLayout>
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*"
        android:id="@+id/resultTL"
        >
        <TableRow
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            >
            <Button
                android:id="@+id/playAgain"
                android:layout_height="match_parent"
                android:layout_width="0sp"
                android:text="@string/rs3"
                android:onClick="playAgain"
                >
            </Button>
            <Button
                android:id="@+id/jawab"
                android:layout_height="match_parent"
                android:layout_width="0sp"
                android:text="@string/rs2"
                android:onClick="showResultPlay"
                >
            </Button>
            <Button
                android:id="@+id/next"
                android:layout_height="match_parent"
                android:layout_width="0sp"
                android:text="@string/rs1"
                android:onClick="goToMainpage"
                >
            </Button>

        </TableRow>
    </TableLayout>

    <LinearLayout
        android:id="@+id/result"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginHorizontal="5sp"
        android:layout_marginVertical="5sp"
        android:background="@color/white"
        android:visibility="invisible"
        >
    </LinearLayout>
</LinearLayout>