<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/darkBlueMatte"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ll"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/m"
            android:gravity="center"
            android:background="@color/black"
            android:textColor="@color/white"
            android:paddingVertical="10sp"
            />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="*"
            >
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingVertical="10sp"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/m0"
                    android:gravity="center"
                    android:background="@drawable/line"
                    android:textSize="20sp"
                    >
                </TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/contextHiScore"
                    android:gravity="center"
                    android:background="@drawable/line"
                    android:textSize="20sp"
                    >
                </TextView>
            </TableRow>


        </TableLayout>
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="*">
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <Button
                    android:layout_height="match_parent"
                    android:layout_width="0sp"
                    android:text="@string/m1"
                    android:onClick="clearHiScore"
                    >
                </Button>
                <Button
                    android:layout_height="match_parent"
                    android:layout_width="0sp"
                    android:text="@string/m3"
                    android:onClick="ShowHiScore"
                    >
                </Button>
                <Button
                    android:layout_height="match_parent"
                    android:layout_width="0sp"
                    android:text="@string/m4"
                    android:onClick="showLastPlay"
                    >
                </Button>
            </TableRow>
        </TableLayout>

        <LinearLayout
            android:id="@+id/result0"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginHorizontal="5sp"
            android:layout_marginVertical="5sp"
            android:background="@color/green"
            android:visibility="invisible"
            >
        </LinearLayout>
        <LinearLayout
            android:id="@+id/result1"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginHorizontal="5sp"
            android:layout_marginVertical="5sp"
            android:background="@color/orange"
            android:visibility="invisible"
            >
        </LinearLayout>

        <Button
            android:id="@+id/soalEsai"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text= "@string/m2"
            android:onClick="play"
            >
        </Button>

    </LinearLayout>
</ScrollView>