<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkBlueMatte"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/p"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:background="@color/black"
        >
    </TextView>

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:stretchColumns="*"
        android:background="@color/green">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <TextView
                android:layout_height="match_parent"
                android:layout_width="wrap_content"
                android:text="@string/p1"
                android:gravity="center"
                >
            </TextView>
            <TextView
                android:layout_height="match_parent"
                android:layout_width="wrap_content"
                android:text="@string/p2"
                android:gravity="center"
                >
            </TextView>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="0"
                android:id="@+id/score"
                >
            </TextView>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:id="@+id/timer"
                >
            </TextView>
        </TableRow>
    </TableLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="pertanyaan"
        android:layout_gravity="center"
        android:gravity="center"
        android:id="@+id/pertanyaan"
        android:layout_marginVertical="20sp"
        android:background="@drawable/line1"
        >
    </TextView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="50sp"
        android:text="Soal"
        android:layout_gravity="center"
        android:gravity="center"
        android:id="@+id/soal"
        android:layout_marginVertical="20sp"
        android:background="@drawable/line0"
        >
    </TextView>


    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/answer"
        >
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/line"
            android:id="@+id/A"
            >
        </RadioButton>
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/line"
            android:id="@+id/B"
            >
        </RadioButton>
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/line"
            android:id="@+id/C"
            >
        </RadioButton>
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/line"
            android:id="@+id/D"
            >
        </RadioButton>
    </RadioGroup>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/p4"
        android:id="@+id/jawab"
        >
    </Button>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/p3"
        android:onClick="goToResult"
        android:id="@+id/goToResult"
        android:visibility="visible"
        >
    </Button>

</LinearLayout>