<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/darkBlueMatte"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/b"
        android:textColor="@color/white"
        android:background="@color/black"
        android:gravity="center"
        >
    </TextView>
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <Button
                android:layout_height="match_parent"
                android:layout_width="0sp"
                android:text="@string/b1"
                android:onClick="goToMainpage"
                >
            </Button>
            <Button
                android:id="@+id/play"
                android:layout_height="match_parent"
                android:layout_width="0sp"
                android:text="@string/b0"
                android:onClick="playAgain"
                >
            </Button>
        </TableRow>
    </TableLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10sp"
        android:layout_marginVertical="10sp"
        android:stretchColumns="*"
        >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/line"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/b4"
                android:gravity="center"
                android:textSize="20sp"
                >
            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/b4"
                android:gravity="center"
                android:textSize="20sp"
                android:id="@+id/Soal"
                >
            </TextView>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <TableLayout
                android:layout_width="0sp"
                android:layout_height="match_parent"
                android:stretchColumns="*"
                android:background="@drawable/line"
                >
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="100sp"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="40sp"
                        android:text="@string/b6"
                        android:gravity="center"
                        android:textSize="20sp"
                        >
                    </TextView>
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="220sp"
                        android:text="@string/b6"
                        android:gravity="center"
                        android:textSize="60sp"
                        android:id="@+id/Kanji"
                        >
                    </TextView>
                </TableRow>
            </TableLayout>

            <TableLayout
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:stretchColumns="*"
                >

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                    <TableLayout
                        android:layout_width="0sp"
                        android:layout_height="wrap_content"
                        android:stretchColumns="*"
                        android:background="@drawable/line"
                        >
                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="100sp"
                            >
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/b5"
                                android:gravity="center"
                                android:textSize="20sp"
                                >
                            </TextView>
                        </TableRow>
                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            >
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="50sp"
                                android:text="@string/b5"
                                android:gravity="center"
                                android:textSize="20sp"
                                android:id="@+id/Indonesia"
                                >
                            </TextView>
                        </TableRow>
                    </TableLayout>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                    <TableLayout
                        android:layout_width="0sp"
                        android:layout_height="wrap_content"
                        android:stretchColumns="*"
                        android:background="@drawable/line"
                        >
                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="100sp"
                            >
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/b7"
                                android:gravity="center"
                                android:textSize="20sp"
                                >
                            </TextView>
                        </TableRow>
                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            >
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="50sp"
                                android:text="@string/b7"
                                android:gravity="center"
                                android:textSize="20sp"
                                android:id="@+id/Onyomi"
                                >
                            </TextView>
                        </TableRow>
                    </TableLayout>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                    <TableLayout
                        android:layout_width="0sp"
                        android:layout_height="wrap_content"
                        android:stretchColumns="*"
                        android:background="@drawable/line"
                        >
                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="100sp"
                            >
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/b8"
                                android:gravity="center"
                                android:textSize="20sp"
                                >
                            </TextView>
                        </TableRow>
                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            >
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="50sp"
                                android:text="@string/b8"
                                android:gravity="center"
                                android:textSize="20sp"
                                android:id="@+id/Kunyomi"
                                >
                            </TextView>
                        </TableRow>
                    </TableLayout>
                </TableRow>

            </TableLayout>


        </TableRow>
    </TableLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <Button
                android:layout_height="match_parent"
                android:layout_width="0sp"
                android:text="@string/b2"
                android:onClick="prev"
                >
            </Button>
            <Button
                android:layout_height="match_parent"
                android:layout_width="0sp"
                android:text="@string/b3"
                android:onClick="next"
                >
            </Button>
        </TableRow>
    </TableLayout>
</LinearLayout>
